--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -95,7 +95,7 @@ body {
     font-size: 1em;
   }
 
-  .main-nav > li > a:hover {
+  .main-nav > li > a:hover, .oui {
     background-color: white;
     color: #C61128;
     cursor: text;
